[package]
name = "haven_ark"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/iMohmmedSA/haven_ark"


[dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "b655cb6ebf4a71ea16a4460bb987cb7c1bd0760e" }
image = "0.25"
open = "5"

[build-dependencies]
icon = { git = "https://github.com/iMohmmedSA/icon", rev = "7cbc80f600a5a1fb4aa25887062e44ead56e2df2" }
