[package]
name = "haven_ark"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/iMohmmedSA/haven_ark"


[dependencies]
etcetera = "0.10"
iced = { git = "https://github.com/iced-rs/iced", rev = "b655cb6ebf4a71ea16a4460bb987cb7c1bd0760e", features = ["tokio", "qr_code"] }
image = "0.25"
keyring = "3"
open = "5"
plex_client = { git = "https://github.com/iMohmmedSA/plex_client", rev = "e9426f617575c49bd4d6bb63e832eb1a2b74fc20" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.36"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
icon = { git = "https://github.com/iMohmmedSA/icon", rev = "7cbc80f600a5a1fb4aa25887062e44ead56e2df2" }
